--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -39,6 +39,7 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '11'
 
       # Install requirements
