--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -18,7 +18,7 @@ jobs:
 
     # A strategy creates a build matrix for your jobs
     strategy:
-
+      fail-fast: false
       # You can define a matrix of different job configurations
       matrix:
 
