--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -49,8 +49,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel setuptools
           python -m pip install -r requirements.txt
+          python -m pip install antlr4-tools
           python -m pip list
-          pip install antlr4-tools
 
       - name: Generate parser
         working-directory: project/gql
