--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -45,6 +45,7 @@ jobs:
           python -m pip install --upgrade pip wheel setuptools
           python -m pip install -r requirements.txt
           python -m pip install antlr4-tools
+          python -m pip install antlr4_python3_runtime
           python -m pip list
 
       - name: Generate parser
